@@ -1,6 +1,7 @@
 17. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- q3popmenu with qmenu replaced at mainwidget, guibase, borrowdialog
 	- q3cstring removed
+	- q3textbrowser replaced by qtextbrowser
 
 17. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- handle files larger than 1tb fixed
